<resources>
    <string name="app_name">MyWordsApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_all">显示全部单词</string>
    <string name="action_search">查找</string>
    <string name="action_insert">新增</string>
    <string name="action_delete">删除</string>
    <string name="action_update">修改</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input">请输入需要查询的单词</string>
    <string name="search">搜索</string>
    <string name="word">单词</string>
    <string name="input_word">输入单词</string>
    <string name="mean">含义</string>
    <string name="explain">单词释义</string>
    <string name="instance">示例</string>
    <string name="word_instance">单词示例</string>
    <string name="add_word">添加单词</string>
    <string name="del_word">删除单词</string>
    <string name="alt_word">修改单词</string>
    <string name="help">帮助</string>
    <string name="ok">确定</string>
    <string name="_0">0</string>
    <string name="dancsy">单词释义</string>
    <string name="danclj">单词例句</string>
    <string name="cancel">取消</string>
</resources>
