<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow>

        <TextView android:text="@string/word" />

        <EditText
            android:id="@+id/txtWord"
            android:layout_width="match_parent"
            android:autofillHints=""
            android:inputType=""
            android:hint="@string/input_word"
            />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/mean" />

        <EditText
            android:id="@+id/txtMeaning"
            android:layout_width="match_parent"
            android:autofillHints=""
            android:inputType=""
            android:hint="@string/explain"
            />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/instance" />

        <EditText
            android:id="@+id/txtSample"
            android:layout_width="match_parent"
            android:autofillHints=""
            android:inputType=""
            android:hint="@string/word_instance"
            />
    </TableRow>
</TableLayout>
