<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View">

    <TextView
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/_0"
        />
    <TextView
        android:id="@+id/word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/id"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/_0"
        />
    <TextView
        android:id="@+id/meaning"
        android:layout_width="300dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@+id/word"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/dancsy"
        />
    <TextView
        android:id="@+id/sample"
        android:layout_width="400dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/meaning"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/danclj"
        />

</android.support.constraint.ConstraintLayout>